--- a/helpr/helpr/Base.lproj/Main.storyboard
+++ b/helpr/helpr/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yKZ-tV-7zm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yKZ-tV-7zm">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -679,9 +679,10 @@
                     <tabBar key="tabBar" opaque="NO" clipsSubviews="YES" contentMode="center" translucent="NO" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" name="RoyalPurple"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" name="RoyalPurple"/>
-                        <color key="barTintColor" name="RoyalPurple"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="RoyalPurple"/>
                     </tabBar>
                     <connections>
                         <segue destination="4kE-bR-hig" kind="relationship" relationship="viewControllers" id="v9B-TT-TkL"/>
@@ -807,7 +808,7 @@
         <scene sceneID="p24-O9-sZ5">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4kE-bR-hig" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="homeENBL" id="Zse-rb-g9p"/>
+                    <tabBarItem key="tabBarItem" title="" image="home" id="Zse-rb-g9p"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aYj-4h-3N1">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -2058,10 +2059,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Chevron" width="33" height="33"/>
-        <image name="SplashScreen" width="682" height="682"/>
-        <image name="account" width="33" height="33"/>
-        <image name="homeENBL" width="33" height="33"/>
+        <image name="Chevron" width="75" height="75"/>
+        <image name="SplashScreen" width="2047" height="2047"/>
+        <image name="account" width="75" height="75"/>
+        <image name="home" width="75" height="75"/>
         <image name="imageView:r6w-b4-Ss5:image" width="360" height="360">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGVVZYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QEgcI
@@ -10835,12 +10836,12 @@ NAAIBTsACAVAAAgFTQAIBVAACAVdAAgFYgAIBWoACAVtAAgFcgAIBXoACAV9AAgFjwAIBZIACAWXAAAA
 AAAABAEAAAAAAAAAWQAAAAAAAAAAAAAAAAAIBZk
 </mutableData>
         </image>
-        <image name="job" width="33" height="33"/>
-        <image name="jobs" width="33" height="33"/>
-        <image name="myposts" width="33" height="33"/>
-        <image name="post" width="33" height="33"/>
-        <image name="star" width="33" height="33"/>
-        <image name="steve" width="400" height="266"/>
+        <image name="job" width="75" height="75"/>
+        <image name="jobs" width="75" height="75"/>
+        <image name="myposts" width="75" height="75"/>
+        <image name="post" width="75" height="75"/>
+        <image name="star" width="75" height="75"/>
+        <image name="steve" width="1200" height="800"/>
         <namedColor name="RoyalPurple">
             <color red="0.63529411764705879" green="0.44705882352941179" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
